Fixed header position
Header was overlapping landing page row in Projects. This is the fix.

--- a/assets/CSS/style-index.css
+++ b/assets/CSS/style-index.css
@@ -1,7 +1,3 @@
-body {
-  min-height: 100vh;
-}
-
 :root {
   --color1: #f7a31b;
   --color2: white;
